recorded 検索 api 拡充
